--- a/modern_portfolio.html
+++ b/modern_portfolio.html
@@ -585,10 +585,18 @@
             <div class="typing-text">And I'm a <span id="typed-text"></span></div>
             <p>Passionate Data Analyst with expertise in Python and Data Visualization. Transforming data into actionable insights.</p>
             <div class="social-links">
-                <a href="https://www.linkedin.com/in/ananthaprabhu" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/Vishavishl/Data-projects.git" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://www.instagram.com/its_me_vishal_cz" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://x.com/d2ir3t5y" target="_blank"><i class="fab fa-x"></i></a>
+                <a href="https://www.linkedin.com/in/ananthaprabhu" aria-label="Visit Example">
+                <i class="fab fa-linkedin" aria-hidden="true"></i>
+                </a>
+                <a href="https://github.com/Vishavishl/Data-projects.git" aria-label="Visit Example">
+                <i class="fab fa-github" aria-hidden="true"></i>
+                </a>
+                <a href="https://www.instagram.com/its_me_vishal_cz" aria-label="Visit Example">
+                <i class="fab fa-instagram" aria-hidden="true"></i>
+                </a>
+                <a href="https://x.com/d2ir3t5y" aria-label="Visit Example">
+                <i class="fab fa-x" aria-hidden="true"></i>
+                </a>
             </div>
             <a href="#contact" class="btn-primary">Get In Touch</a>
         </div>
@@ -731,10 +739,18 @@
                     </div>
                 </div>
                 <div class="social-links">
-                    <a href="https://www.linkedin.com/in/ananthaprabhu" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://github.com/Vishavishl/Data-projects.git" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="https://www.instagram.com/its_me_vishal_cz" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="https://x.com/d2ir3t5y" target="_blank"><i class="fab fa-x"></i></a>
+                <a href="https://www.linkedin.com/in/ananthaprabhu" aria-label="Visit Example">
+                <i class="fab fa-linkedin" aria-hidden="true"></i>
+                </a>
+                <a href="https://github.com/Vishavishl/Data-projects.git" aria-label="Visit Example">
+                <i class="fab fa-github" aria-hidden="true"></i>
+                </a>
+                <a href="https://www.instagram.com/its_me_vishal_cz" aria-label="Visit Example">
+                <i class="fab fa-instagram" aria-hidden="true"></i>
+                </a>
+                <a href="https://x.com/d2ir3t5y" aria-label="Visit Example">
+                <i class="fab fa-x" aria-hidden="true"></i>
+                </a>
                 </div>
             </div>
             <div class="contact-form">
