--- a/modern_portfolio.html
+++ b/modern_portfolio.html
@@ -403,6 +403,9 @@
             color: var(--dark);
         }
 
+        .contact .card .btn-primary{
+            width: 100%;
+        }
         .contact-item {
             display: flex;
             align-items: center;
@@ -609,7 +612,7 @@
     <section class="about" id="about">
         <h2 class="section-title">About <span>Me</span></h2>
         <div class="about-content">
-            <h3>Data Analyst & Python Developer</h3>
+            <h3>Data Analyst &amp; Python Developer</h3>
             <p>I'm Ananthaprabhu, a dedicated Data Analyst with a strong foundation in Data Science. I graduated from Sri Sairam Engineering College in 2024 and have gained valuable experience working as a Graphic Designer at RR Donnelley while simultaneously enhancing my analytical skills at Codepilot Academy in Chennai.</p>
             <p>My journey combines creative design experience with technical data analysis expertise. I've completed advanced coursework in Data Analytics and have successfully delivered multiple projects in Machine Learning and Data Analytics. My passion lies in extracting meaningful insights from complex datasets and translating them into actionable business strategies.</p>
             <p>I specialize in Python programming, statistical analysis, data visualization, and building predictive models that drive data-informed decision making.</p>
@@ -631,7 +634,7 @@
                     <div class="skill-bar"><div class="skill-progress" data-progress="95"></div></div>
                 </div>
                 <div class="skill-item">
-                    <div class="skill-name"><span>Pandas & NumPy</span><span>80%</span></div>
+                    <div class="skill-name"><span>Pandas &amp; NumPy</span><span>80%</span></div>
                     <div class="skill-bar"><div class="skill-progress" data-progress="80"></div></div>
                 </div>
                 <div class="skill-item">
@@ -655,7 +658,7 @@
                     <div class="skill-bar"><div class="skill-progress" data-progress="80"></div></div>
                 </div>
                 <div class="skill-item">
-                    <div class="skill-name"><span>Matplotlib & Seaborn</span><span>80%</span></div>
+                    <div class="skill-name"><span>Matplotlib &amp; Seaborn</span><span>80%</span></div>
                     <div class="skill-bar"><div class="skill-progress" data-progress="80"></div></div>
                 </div>
                 <div class="skill-item">
@@ -698,7 +701,7 @@
             </div>
             <div class="project-card">
                 <div class="project-icon">💻</div>
-                <h3>Web Design & Development</h3>
+                <h3>Web Design &amp; Development</h3>
                 <p>Comprehensive web development projects including responsive design, user experience optimization, SEO implementation, and full-stack solutions using modern frameworks and technologies.</p>
                 <a href="#" class="btn-primary">Learn More</a>
             </div>
@@ -767,7 +770,7 @@
                     <div class="form-group">
                         <textarea placeholder="Your Message" required></textarea>
                     </div>
-                    <button type="submit" class="btn-primary" style="width: 100%;">Send Message</button>
+                    <div class="card"><button type="submit" class="btn-primary">Send Message</button></div>
                 </form>
             </div>
         </div>
