--- a/modern_portfolio.html
+++ b/modern_portfolio.html
@@ -44,7 +44,7 @@
             <a href="#contact" class="btn-primary">Get In Touch</a>
         </div>
         <div class="hero-image">
-            <img class="img" src="C:\Users\Admin\Downloads\port\photo1.jpg" alt="Ananthaprabhu">
+            <img class="img" src="images\photo1.jpg" alt="Ananthaprabhu">
         </div>
     </section>
 
