--- a/modern_portfolio.html
+++ b/modern_portfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ananthaprabhu | Data Analyst</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-     <link rel="stylesheet" href="css\style.css">
+     <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
     <!-- Navigation -->
@@ -214,7 +214,7 @@
             </div>
         </div>
     </section>
-    <script src="js\script.js"></script>
+    <script src="js/script.js"></script>
     </body>
 </html>
 
